--- a/style.sass
+++ b/style.sass
@@ -9,3 +9,12 @@
   padding: 0 10px
   background: black
   opacity: 0
+
+.node
+  fill: #CB5B5A
+  stroke: #fff
+  stroke-width: 2px
+
+.link
+  stroke: #777
+  stroke-width: .5px
