--- a/flags.css
+++ b/flags.css
@@ -6,9 +6,8 @@
     display: inline-block;
     width: 16px;
     height: 11px;
-    background: url('flags.png') no-repeat;
+    background: url('https://media.flag-sprites.com/60iagj/flags.png') no-repeat;
 }
-
 
 .flag.flag-gw {
     background-position: -144px -55px;
